# Storyteller-RPC

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  com.storyteller.discord-rpc.plist  config.json.example  docker-compose.yml
config/: config.json.example
installer/: Cargo.toml
installer/src/: main.rs
src/: main.rs
