[package]
name = "storyteller-discord-rpc"
version = "0.1.0"
edition = "2021"
authors = ["Eric Barbosa <eric@erictb.com.com>"]
description = "Displays what you're listening to on Storyteller on Discord"


[dependencies]
tokio = { version = "1", features = ["full"] }
discord-rich-presence = { git = "https://github.com/vionya/discord-rich-presence" }
reqwest = { version = "0.12.12", features = ["json", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5.4"
futures = "0.3"
log = "0.4"
env_logger = "0.11"